<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="16dp"
    android:strokeWidth="1"
    android:strokeColor="@android:color/darker_gray">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:weightSum="1">
            <TextView
                android:id="@+id/tvSerialNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textSize="14sp"
                android:text=" " />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnAudio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/audio"
                    android:padding="8dp"
                    android:src="@android:drawable/ic_media_play"
                    app:tint="@android:color/darker_gray" />

                <ImageButton
                    android:id="@+id/btnBookmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/bookmark"
                    android:padding="8dp"
                    android:src="@drawable/outline_bookmark_star_24"
                    app:tint="@android:color/darker_gray" />

                <ImageButton
                    android:id="@+id/btnView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/view"
                    android:padding="8dp"
                    android:src="@android:drawable/ic_menu_view" />
                <ImageButton
                    android:id="@+id/btnSocial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/social"
                    android:padding="8dp"
                    android:src="@drawable/ic_share_24" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/tvStanzas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvMeaning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="15sp"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
